# Babel

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/core/: audio.cpp  audio.hpp  client.cpp  client.hpp  main.cpp  qtwindow.cpp  qtwindow.hpp  udpclient.cpp  udpclient.hpp
Server/: CMakeLists.txt
Server/core/: main.cpp  server.cpp  server.hpp
